client/app/shared/assets/css/main.css
div.md-default-theme, md-content.md-default-theme {
  background-color: #eee;
}

md-card,.md-whiteframe-1dp, .md-whiteframe-15dp{
  background-color: #fff;
}

md-card h2:first-of-type {
    margin-top: 0;
}

md-toolbar .md-button.md-default-theme {
    border-radius: 99%; // round toolbar buttons
}

h2 {
  font-weight: 400;
}

md-content.md-hue-3{
  color:#fff;
}

.md-toolbar-tools-bottom {
  font-size: small;
  color:#fff;
}

.md-toolbar-tools-bottom:last-child {
    opacity: 0.8;
}


md-toolbar:not(.md-hue-1), .md-fab {
  fill: #fff;
}

md-sidenav {
  fill: #737373;
}

.user-avatar {
  border-radius: 99%;
}

body.no-sidenav-left .sidenav-left-toggle {
  display: none;
}

body.no-sidenav-left md-sidenav.md-sidenav-left {
  display: none !important;
}

body {
  position: relative;
}

.custom-messages {
  position: relative;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
  min-height: 24px;
  color:#f00;
}

a, a:hover, a:focus, a:active, a:visited{
  color:#000;
}

.department.active{
  background-color: #fbfbfb;
}

.department + md-whiteframe {
  max-height:0;
  overflow: hidden;
  padding-top:0;
  padding-bottom:0;
  opacity:0;
   -webkit-transition: all 1s ease; /* Safari */
    transition: all 1s ease;
}

.department.active + md-whiteframe {
  max-height:400px;
  padding-top:10px;
  padding-bottom:10px;
  opacity: 1;
}

/*testing virtual slider*/
/*
.virtualRepeatdemoInfiniteScroll #vertical-container {
  height: 292px;
  width: 400px; }
.virtualRepeatdemoInfiniteScroll .repeated-item {
  border-bottom: 1px solid #ddd;
  box-sizing: border-box;
  height: 40px;
  padding-top: 10px; }
.virtualRepeatdemoInfiniteScroll md-content {
  margin: 16px; }
.virtualRepeatdemoInfiniteScroll md-virtual-repeat-container {
  border: solid 1px grey; }
.virtualRepeatdemoInfiniteScroll .md-virtual-repeat-container .md-virtual-repeat-offsetter {
  padding-left: 16px; }

*/

